@@ -1,0 +1,19 @@
+message Outer {                  // Level 0
+  message MiddleAA {  // Level 1
+    message Inner {   // Level 2
+      required int64 ival = 1;
+      optional bool  booly = 2;
+    }
+    optional Inner inner = 1;
+  }
+  optional MiddleAA middleaa = 1;
+  message MiddleBB {  // Level 1
+    message Inner {   // Level 2
+      required int32 ival = 1;
+      optional bool  booly = 2;
+    }
+    optional Inner inner = 1;
+  }
+  optional MiddleBB middlebb = 2;
+}
+
